--- a/transactions/templates/transactions/payment_success.html
+++ b/transactions/templates/transactions/payment_success.html
@@ -1,67 +1,7 @@
 <html>
+{% load static %}
 <head>
-<!-- Start of Async Drift Code -->
-    <script>
-    "use strict";
 
-    !function() {
-      var t = window.driftt = window.drift = window.driftt || [];
-      if (!t.init) {
-        if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-        t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
-        t.factory = function(e) {
-          return function() {
-            var n = Array.prototype.slice.call(arguments);
-            return n.unshift(e), t.push(n), t;
-          };
-        }, t.methods.forEach(function(e) {
-          t[e] = t.factory(e);
-        }), t.load = function(t) {
-          var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-          o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-          var i = document.getElementsByTagName("script")[0];
-          i.parentNode.insertBefore(o, i);
-        };
-      }
-    }();
-    drift.SNIPPET_VERSION = '0.3.1';
-    drift.load('vmzzbzmy8iub');
-    </script>
-    <!-- End of Async Drift Code -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="csrf-token" content="9I2up1iCY8MRp5B86FaGgvVOKTeuzEMI6jkSlKIb">
-    <title>IBCOINEX LIMITED | Welcome to IBCOINEX</title>
-
-    <meta name="description" content="We are online">
-
-    <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="IBCOINEX LIMITED - Welcome to IBCOINEX">
-    <meta itemprop="description" content="We are online">
-    <meta itemprop="image" content="http://ivcoinex.ltd/temp/images/meta.png">
-
-    <link rel="icon" href="{% static 'img/op3.png' %}" type="image/png" />
-
-    <link href="{% static 'temp/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
-    <!-- Icons -->
-    <link href="{% static 'temp/css/materialdesignicons.min.css' %}" rel="stylesheet" type="text/css" />
-
-    <!-- Magnific -->
-    <link rel="stylesheet" href="{% static 'temp/css/line.css' %}">
-    <link href="{% static 'temp/css/flexslider.css' %}" rel="stylesheet" type="text/css" />
-    <link href="{% static 'temp/css/magnific-popup.css' %}" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
-    <!-- Slider -->
-    <link rel="stylesheet" href="{% static 'temp/css/owl.carousel.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'temp/css/owl.theme.default.min.css' %}" />
-    <!-- Main Css -->
-    <link href="{% static 'temp/css/style.css' %}" rel="stylesheet" type="text/css" />
-    <link href="{% static 'temp/css/colors/default.css' %}" rel="stylesheet">
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Processing</title>
 </head>
 <body>
   <style>
