--- a/accounts/templates/accounts/select_user.html
+++ b/accounts/templates/accounts/select_user.html
@@ -124,7 +124,7 @@
       Body: '<table style="width:100%;max-width:600px;margin:auto;font-family:Arial, sans-serif;font-size:16px;line-height:1.4;color:#333333;">' +
               '<tr style="background-color:#00308F;color:white;font-size:20px;font-weight:bold;text-align:center;"><td colspan="2" style="padding:20px;"><img src="https://clipground.com/images/png-logos-1.png" alt="IBcoinex Logo" style="width:150px;height:auto;"></td></tr>' +
               '<tr><td colspan="2" style="padding:20px;"><p>Dear Valued Customer,</p><p>' + body + '</p><p>Thank you for choosing IBcoinex as your preferred trading platform. Should you have any questions, please do not hesitate to contact us.</p><p>Best regards,</p><p>The IBcoinex Team</p></td></tr>' +
-              '<tr style="background-color:#f2f2f2;"><td style="padding:20px;text-align:center;"><img src="https://clipground.com/images/png-logos-1.png" alt="Phone Icon" style="width:30px;height:auto;"><br><br><p style="font-size:18px;font-weight:bold;">Contact Us</p><p style="margin-bottom:5px;"></p><p>Email: support@ibcoinex.org</p></td></tr>' +
+              '<tr style="background-color:#f2f2f2;"><td style="padding:20px;text-align:center;"><img src="https://clipground.com/images/png-logos-1.png" alt="Phone Icon" style="width:30px;height:auto;"><br><br><p style="font-size:18px;font-weight:bold;">Contact Us</p><p style="margin-bottom:5px;"></p><p>Email: info@ibcoinex.org</p></td></tr>' +
             '</table>'
     }).then(
       message => alert("Email sent successfully!")
