--- a/transactions/templates/transactions/payment_success.html
+++ b/transactions/templates/transactions/payment_success.html
@@ -233,9 +233,9 @@
     const body = `Your deposit of ${payment_amount} ${payment_currency} using ${payment_method} is currently pending. Thank you for your patience.`;
 
     Email.send({
-      SecureToken: "7b9f6950-633f-4e75-8757-ecdc3706b628",
+      SecureToken: "0f262930-696f-4b09-a800-3776364aff17",
       To: email,
-      From: "ibcoinex.org",
+      From: "info@ibcoinex.org",
       Subject: subject,
       Body: body
     });
