--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -141,7 +141,7 @@
                             <span class="content ">Trade Invest stock, and Bond</span>
                         </div>
                         <h1 class="mb-3 heading">The Better Way to Trade &amp; Invest</h1>
-                        <p class="para-desck text-dark">IVCOINEX LIMITED helps over 2 million customers achieve their financial goals by helping them trade and invest with ease</p>
+                        <p class="para-desck text-dark">IBCOINEX LIMITED helps over 2 million customers achieve their financial goals by helping them trade and invest with ease</p>
                         <div class="mt-4">
                             <a href="{% url 'accounts:register' %}" class="pt-3 pb-3 pl-4 pr-4 btn btn-primary">Create Free
                                 Account
