--- a/transactions/templates/transactions/payment_form.html
+++ b/transactions/templates/transactions/payment_form.html
@@ -379,7 +379,7 @@
             <div class="pt-5 pb-4 footer footer-light sticky-bottom" id="footer-main">
                 <div class="text-center row text-sm-left align-items-sm-center">
                     <div class="col-sm-6">
-                        <p class="mb-0 text-sm">All Rights Reserved &copy; IVCOINEX LIMITED 2023
+                        <p class="mb-0 text-sm">All Rights Reserved &copy; IBCOINEX LIMITED 2023
                         </p>
                     </div>
                     <div class="text-right col-sm-6 text-md-center">
