--- a/transactions/templates/transactions/trading_plan.html
+++ b/transactions/templates/transactions/trading_plan.html
@@ -42,7 +42,7 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="IBCOINEX LIMITED - Welcome to IBCOINEX">
     <meta itemprop="description" content="We are online">
-    <meta itemprop="image" content="http://ivcoinex.ltd/temp/images/meta.png">
+    <meta itemprop="image" content="https://1.bp.blogspot.com/-yIt05NVyOF0/WdYdw6FRM7I/AAAAAAAAA2c/Y8szr6n7DNwk_og9uPp8Fw1Wvz2PwAMZQCLcBGAs/s1600/Letter%2BB%2BLogo%2BDesign%2BDesign%2BTransparent%2Bfree.png">
 
     <link rel="icon" href="{% static 'img/op3.png' %}" type="image/png" />
 
