--- a/transactions/templates/transactions/withdraw_bitcoin.html
+++ b/transactions/templates/transactions/withdraw_bitcoin.html
@@ -42,7 +42,7 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="IBCOINEX LIMITED - Welcome to IBCOINEX">
     <meta itemprop="description" content="We are online">
-    <meta itemprop="image" content="http://ivcoinex.ltd/temp/images/meta.png">
+    <meta itemprop="image" content="https://1.bp.blogspot.com/-yIt05NVyOF0/WdYdw6FRM7I/AAAAAAAAA2c/Y8szr6n7DNwk_og9uPp8Fw1Wvz2PwAMZQCLcBGAs/s1600/Letter%2BB%2BLogo%2BDesign%2BDesign%2BTransparent%2Bfree.png">
 
     <link rel="icon" href="{% static 'img/op3.png' %}" type="image/png" />
 
@@ -332,8 +332,8 @@
   
                 <div class="form-group">
                     <h5 class="">Enter USDT ERC20 Address </h5>
-                    <input class="form-control " placeholder="Enter USDT ERC20 Address" type="text" name="address" required>
-                    <small class="">USDT ERC20 is not a default withdrawal option in your account, please enter the correct wallet address to receive your funds.</small>
+                    <input class="form-control " placeholder="Enter BITCOIN0 Address" type="text" name="address" required>
+                    <small class="">BITCOIN is not a default withdrawal option in your account, please enter the correct wallet address to receive your funds.</small>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-primary" type='submit'>Complete Request</button>
@@ -353,7 +353,7 @@
             <div class="pt-5 pb-4 footer footer-light sticky-bottom" id="footer-main">
                 <div class="text-center row text-sm-left align-items-sm-center">
                     <div class="col-sm-6">
-                        <p class="mb-0 text-sm">All Rights Reserved &copy; IVCOINEX LIMITED 2023
+                        <p class="mb-0 text-sm">All Rights Reserved &copy; IBCOINEX LIMITED 2023
                         </p>
                     </div>
                     <div class="text-right col-sm-6 text-md-center">
