--- a/core/templates/core/transactions.html
+++ b/core/templates/core/transactions.html
@@ -311,7 +311,7 @@
                             <span class="badge badge-primary badge-pill">
                     New
                 </span>
-                            <span class="alert-content">Welcome to IVCOINEX</span>
+                            <span class="alert-content">Welcome to IBCOINEX</span>
                         </div>
                     </div>
                 </div>
