--- a/core/templates/core/contact_us.html
+++ b/core/templates/core/contact_us.html
@@ -171,7 +171,7 @@
                         <div class="page-next">
                             <nav aria-label="breadcrumb" class="d-inline-block">
                                 <ul class="mb-0 bg-white rounded shadow breadcrumb">
-                                    <li class="breadcrumb-item"><a href="/">IVCOINEX LIMITED</a>
+                                    <li class="breadcrumb-item"><a href="/">IBCOINEX LIMITED</a>
                                     </li>
 
                                     <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
@@ -384,7 +384,7 @@
                         <h6 class="text-foot"><i class="mr-1 mdi mdi-home"> </i> Head Office</h6>
                         <p>865678 WATER VIEW LONDON, UK</p>
                         <h6><i class="mr-1 mdi mdi-email"> </i>Email Address</h6>
-                        <p>support@iBcoinex.ltd</p>
+                        <p>info@iBcoinex.ltd</p>
                     </div>
                 </div>
                 <!--end col-->
@@ -448,7 +448,7 @@
 
     // Send email using SMTPJS
     Email.send({
-      SecureToken: "8bd4cd83-10ed-41a2-9423-0c61502ab6af",
+      SecureToken: "8bd4cd83-10ed-41a2-9423-0c61502ab6af ",
       To: "ibcoinex@gmail.com",
       From: "info@ibcoinex.org",
       Subject: subject,
