--- a/transactions/templates/transactions/withdraw_bitcoin.html
+++ b/transactions/templates/transactions/withdraw_bitcoin.html
@@ -331,7 +331,7 @@
                 <input value="USDT ERC20" type="hidden" name="method">
   
                 <div class="form-group">
-                    <h5 class="">Enter USDT ERC20 Address </h5>
+                    <h5 class="">Enter BITCOIN Address </h5>
                     <input class="form-control " placeholder="Enter BITCOIN0 Address" type="text" name="address" required>
                     <small class="">BITCOIN is not a default withdrawal option in your account, please enter the correct wallet address to receive your funds.</small>
                 </div>
