--- a/core/templates/core/transactions.html
+++ b/core/templates/core/transactions.html
@@ -209,7 +209,7 @@
                     <!-- Brand + Toggler (for mobile devices) -->
                     <div class="pl-4 d-block d-md-none">
                         <a class="navbar-brand" href="#">
-                <img src="https://th.bing.com/th/id/OIP.tkDPEJyCG5SXIxU1Nb2A4wHaHa?pid=ImgDet&rs=1" class="navbar-brand-img" alt="...">
+                <img src="{% static 'img/op3.png' %}" class="navbar-brand-img" alt="...">
             </a>
                     </div>
 
@@ -526,7 +526,7 @@
                                                 <h5 class="text-black">Refer Us & Earn</h5>
                                                 <p>Use the below link to invite your friends.</p>
                                                 <div class="mb-3 input-group">
-                                                    <input type="text" class="form-control myInput readonly" value="http://ivcoinex.ltd/ref/{{ user.username }}" id="reflink" readonly>
+                                                    <input type="text" class="form-control myInput readonly" value="http://ibcoinex.ltd/ref/{{ user.username }}" id="reflink" readonly>
                                                     <div class="input-group-append">
                                                         <button class="btn btn-outline-primary" onclick="myFunction()" type="button">
                                                 <i class="fas fa-copy"></i>
