--- a/transactions/templates/transactions/withdraw_bitcoin.html
+++ b/transactions/templates/transactions/withdraw_bitcoin.html
@@ -209,7 +209,7 @@
                     <!-- Brand + Toggler (for mobile devices) -->
                     <div class="pl-4 d-block d-md-none">
                         <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="https://th.bing.com/th/id/OIP.tkDPEJyCG5SXIxU1Nb2A4wHaHa?pid=ImgDet&rs=1" class="navbar-brand-img" alt="...">
+                <img src="{% static 'img/op3.png' %}" class="navbar-brand-img" alt="...">
             </a>
                     </div>
 
