--- a/transactions/templates/transactions/subtrade.html
+++ b/transactions/templates/transactions/subtrade.html
@@ -210,7 +210,7 @@
                     <!-- Brand + Toggler (for mobile devices) -->
                     <div class="pl-4 d-block d-md-none">
                         <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="https://th.bing.com/th/id/OIP.tkDPEJyCG5SXIxU1Nb2A4wHaHa?pid=ImgDet&rs=1" class="navbar-brand-img" alt="...">
+                <img src="{% static 'img/op3.png' %}" class="navbar-brand-img" alt="...">
             </a>
                     </div>
 
@@ -289,17 +289,7 @@
                     </div>
                 </div>
             </nav>
-            <script type="text/javascript">
-                window.$crisp = [];
-                window.CRISP_WEBSITE_ID = "b6a2827a-8021-45eb-97c0-6edda34dd3cb";
-                (function() {
-                    d = document;
-                    s = d.createElement("script");
-                    s.src = "https://client.crisp.chat/l.js";
-                    s.async = 1;
-                    d.getElementsByTagName("head")[0].appendChild(s);
-                })();
-            </script>
+
 
 
 
