--- a/transactions/templates/transactions/transfer_funds.html
+++ b/transactions/templates/transactions/transfer_funds.html
@@ -220,7 +220,7 @@
                     <!-- Brand + Toggler (for mobile devices) -->
                     <div class="pl-4 d-block d-md-none">
                         <a class="navbar-brand" href="https://ivcoinex.ltd/dashboard">
-                <img src="https://ivcoinex.ltd/storage/app/public/photos/nssY3SIYiqdIleavbsWisOSVRJ2L8xZbvQmOrpr7.png" class="navbar-brand-img" alt="...">
+                <img src="{% static 'img/op3.png' %}" class="navbar-brand-img" alt="...">
             </a>
                     </div>
 
