--- a/transactions/templates/transactions/acct_profile.html
+++ b/transactions/templates/transactions/acct_profile.html
@@ -288,17 +288,7 @@
                     </div>
                 </div>
             </nav>
-            <script type="text/javascript">
-                window.$crisp = [];
-                window.CRISP_WEBSITE_ID = "b6a2827a-8021-45eb-97c0-6edda34dd3cb";
-                (function() {
-                    d = document;
-                    s = d.createElement("script");
-                    s.src = "https://client.crisp.chat/l.js";
-                    s.async = 1;
-                    d.getElementsByTagName("head")[0].appendChild(s);
-                })();
-            </script>
+
 
 
 
@@ -348,15 +338,15 @@
                                                     <div class="form-row">
                                                         <div class="form-group col-md-6">
                                                             <label class="">Fullname</label>
-                                                            <input type="text" class="form-control " value="yourfather@gmail.com" name="name">
+                                                            <input type="text" class="form-control " value="example@gmail.com" name="name">
                                                         </div>
                                                         <div class="form-group col-md-6">
                                                             <label class="">Email Address</label>
-                                                            <input type="email" class="form-control " value="yourfather@gmail.com" name="email">
+                                                            <input type="email" class="form-control " value="example@gmail.com" name="email">
                                                         </div>
                                                         <div class="form-group col-md-6">
                                                             <label class="">Phone Number</label>
-                                                            <input type="text" class="form-control " value="yourfather@gmail.com" name="phone">
+                                                            <input type="text" class="form-control " value="example@gmail.com" name="phone">
                                                         </div>
                                                         <div class="form-group col-md-6">
                                                             <label class="">Date of Birth</label>
