--- a/transactions/templates/transactions/trading_plan.html
+++ b/transactions/templates/transactions/trading_plan.html
@@ -289,17 +289,7 @@
                     </div>
                 </div>
             </nav>
-            <script type="text/javascript">
-                window.$crisp = [];
-                window.CRISP_WEBSITE_ID = "b6a2827a-8021-45eb-97c0-6edda34dd3cb";
-                (function() {
-                    d = document;
-                    s = d.createElement("script");
-                    s.src = "https://client.crisp.chat/l.js";
-                    s.async = 1;
-                    d.getElementsByTagName("head")[0].appendChild(s);
-                })();
-            </script>
+
 
 
 
@@ -482,7 +472,7 @@
             <div class="pt-5 pb-4 footer footer-light sticky-bottom" id="footer-main">
                 <div class="text-center row text-sm-left align-items-sm-center">
                     <div class="col-sm-6">
-                        <p class="mb-0 text-sm">All Rights Reserved &copy; IVCOINEX LIMITED 2023
+                        <p class="mb-0 text-sm">All Rights Reserved &copy; IBCOINEX LIMITED 2023
                         </p>
                     </div>
                     <div class="text-right col-sm-6 text-md-center">
