--- a/transactions/templates/transactions/referral.html
+++ b/transactions/templates/transactions/referral.html
@@ -288,17 +288,6 @@
                     </div>
                 </div>
             </nav>
-            <script type="text/javascript">
-                window.$crisp = [];
-                window.CRISP_WEBSITE_ID = "b6a2827a-8021-45eb-97c0-6edda34dd3cb";
-                (function() {
-                    d = document;
-                    s = d.createElement("script");
-                    s.src = "https://client.crisp.chat/l.js";
-                    s.async = 1;
-                    d.getElementsByTagName("head")[0].appendChild(s);
-                })();
-            </script>
 
 
 
@@ -311,7 +300,7 @@
                 <div class="page-title">
                     <div class="row justify-content-between align-items-center">
                         <div class="mb-3 col-md-6 mb-md-0">
-                            <h5 class="mb-0 text-white h3 font-weight-400">Refer users to IVCOINEX LIMITED community</h5>
+                            <h5 class="mb-0 text-white h3 font-weight-400">Refer users to IBCOINEX LIMITED community</h5>
                         </div>
                     </div>
                 </div>
@@ -329,14 +318,14 @@
                                             <div class="col-md-8 offset-md-2">
                                                 <strong>You can refer users by sharing your referral link:</strong><br>
                                                 <div class="mb-3 input-group">
-                                                    <input type="text" class="form-control readonly " value="http://ivcoinex.ltd/ref/{{ user.full_name }}" id="reflink" readonly>
+                                                    <input type="text" class="form-control readonly " value="http://ibcoinex.org/ref/{{ user.full_name }}" id="reflink" readonly>
                                                     <div class="input-group-append">
                                                         <button class="btn btn-outline-secondary" onclick="myFunction()" type="button" id="button-addon2"><i class="fas fa-copy"></i></button>
                                                     </div>
                                                 </div>
 
                                                 <strong>or your Referral ID</strong><br>
-                                                <h4 class="text-success"> {{ user.username }}</h4> <br>
+                                                <h4 class="text-success"> {{ user.account_no }}</h4> <br>
                                                 <h3 class="title1">
                                                     <small>You were referred by</small><br>
                                                     <i class="fa fa-user fa-2x"></i><br>
