--- a/transactions/templates/transactions/subtrade.html
+++ b/transactions/templates/transactions/subtrade.html
@@ -242,7 +242,7 @@
                          <i class="far fa-sign-out-alt"></i>
                          <span>Logout</span>
                         </a>
-                                    <form id="logout-form" action="https://ivcoinex.ltd/logout" method="POST" style="display: none;">
+                                    <form id="logout-form" action="{% url 'logout' %}" method="POST" style="display: none;">
                                         <input type="hidden" name="_token" value="T9eYcLMgQ3eoBOVIbfNhrXWQkZDkUwkSTPK2Hjpy">
                                     </form>
                                 </div>
@@ -316,7 +316,7 @@
                             <div class="card-body">
                                 <div class="mb-5 row">
                                     <div class="shadow-lg col-lg-12 card p-lg-3 p-sm-5">
-                                        <h2 class="">IVCOINEX LIMITED Account manager</h2> <br>
+                                        <h2 class="">IBCOINEX LIMITED Account manager</h2> <br>
                                         <div clas="well">
                                             <p class="text-justify ">Don’t have time to trade or learn how to trade? Our Account Management Service is The Best Profitable Trading Option for you, We can help you to manage your account in the financial MARKET with a simple subscription
                                                 model.<br>
