--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -29,17 +29,7 @@
     drift.SNIPPET_VERSION = '0.3.1';
     drift.load('vmzzbzmy8iub');
     </script>
-    <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/64539a5f4247f20fefef4f7d/1gvj961s2';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
+   
     <!-- End of Async Drift Code -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -73,7 +63,19 @@
     <link href="{% static 'temp/css/colors/default.css' %}" rel="stylesheet">
 
 </head>
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/64539a5f4247f20fefef4f7d/1gvj961s2';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 <body>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
