--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -64,7 +64,7 @@
 
 </head>
 <!--Start of Tawk.to Script-->
-<script type="text/javascript">
+<script >
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
 var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -853,6 +853,19 @@ s0.parentNode.insertBefore(s1,s0);
 
     <!-- Footer Start -->
     <footer class="footer">
+        <!--Start of Tawk.to Script-->
+        <script >
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/64539a5f4247f20fefef4f7d/1gvj961s2';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+        })();
+        </script>
+        <!--End of Tawk.to Script-->
         <div class="container">
             <div class="row">
                 <div class="pb-0 mb-0 col-lg-4 col-12 mb-md-4 pb-md-2">
