--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -63,17 +63,17 @@
     <link href="{% static 'temp/css/colors/default.css' %}" rel="stylesheet">
 
 </head>
+<div id='tawk_64539a5f4247f20fefef4f7d'></div>
 <!--Start of Tawk.to Script-->
-<script >
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); Tawk_API.embedded='tawk_64539a5f4247f20fefef4f7d';
 (function(){
 var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 s1.async=true;
-s1.src='https://embed.tawk.to/64539a5f4247f20fefef4f7d/1gvj961s2';
+s1.src='https://embed.tawk.to/64539a5f4247f20fefef4f7d/1gvlmccph';
 s1.charset='UTF-8';
 s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
+s0.parentNode.insertBefore(s1,s0);})();
 </script>
 <!--End of Tawk.to Script-->
 <body>
