--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -2,19 +2,35 @@
 <html lang="en">
 {% load static %}
 <head>
-<!--Start of Tawk.to Script-->
+                            
 <script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/64539a5f4247f20fefef4f7d/1gvlpi0dl';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
+    (function () {
+        var head = document.getElementsByTagName("head").item(0);
+        var script = document.createElement("script");
+        
+        var src = (document.location.protocol == 'https:' 
+            ? 'https://www.formilla.com/scripts/feedback.js' 
+            : 'http://www.formilla.com/scripts/feedback.js');
+        
+        script.setAttribute("type", "text/javascript"); 
+        script.setAttribute("src", src); script.setAttribute("async", true);        
+
+        var complete = false;
+        
+        script.onload = script.onreadystatechange = function () {
+            if (!complete && (!this.readyState 
+                    || this.readyState == 'loaded' 
+                    || this.readyState == 'complete')) {
+                complete = true;
+                Formilla.guid = 'cs489b54-5024-43ef-a789-8b3ec7398795';
+                Formilla.loadWidgets();                
+            }
+        };
+
+        head.appendChild(script);
+    })();
 </script>
-<!--End of Tawk.to Script-->    
+                                       
 
     
 <!-- Start of Async Drift Code -->
