--- a/core/templates/core/transactions.html
+++ b/core/templates/core/transactions.html
@@ -3,34 +3,33 @@
 {% load static %}
 
 <head>
-<script type="text/javascript">
-    (function () {
-        var head = document.getElementsByTagName("head").item(0);
-        var script = document.createElement("script");
-        
-        var src = (document.location.protocol == 'https:' 
-            ? 'https://www.formilla.com/scripts/feedback.js' 
-            : 'http://www.formilla.com/scripts/feedback.js');
-        
-        script.setAttribute("type", "text/javascript"); 
-        script.setAttribute("src", src); script.setAttribute("async", true);        
+<!-- Start of Async Drift Code -->
+    <script>
+    "use strict";
 
-        var complete = false;
-        
-        script.onload = script.onreadystatechange = function () {
-            if (!complete && (!this.readyState 
-                    || this.readyState == 'loaded' 
-                    || this.readyState == 'complete')) {
-                complete = true;
-                Formilla.guid = 'cs489b54-5024-43ef-a789-8b3ec7398795';
-                Formilla.loadWidgets();                
-            }
+    !function() {
+      var t = window.driftt = window.drift = window.driftt || [];
+      if (!t.init) {
+        if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+        t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+        t.factory = function(e) {
+          return function() {
+            var n = Array.prototype.slice.call(arguments);
+            return n.unshift(e), t.push(n), t;
+          };
+        }, t.methods.forEach(function(e) {
+          t[e] = t.factory(e);
+        }), t.load = function(t) {
+          var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+          o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+          var i = document.getElementsByTagName("script")[0];
+          i.parentNode.insertBefore(o, i);
         };
-
-        head.appendChild(script);
-    })();
-</script>
-
+      }
+    }();
+    drift.SNIPPET_VERSION = '0.3.1';
+    drift.load('vmzzbzmy8iub');
+    </script>
     <!-- End of Async Drift Code -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
