--- a/accounts/templates/accounts/form.html
+++ b/accounts/templates/accounts/form.html
@@ -56,23 +56,23 @@
     {% csrf_token %}
     {{ form|crispy }}
     <br>
-    <div class="col-lg-12">
-        <div class="d-flex justify-content-between">
-            <div class="form-group">
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="customCheck1" name="remember">
-                    <label class="custom-control-label" for="customCheck1">Remember me</label>
-                </div>
-            </div>
-        </div>
-    </div>
+                                        <div class="col-lg-12">
+                                        <div class="d-flex justify-content-between">
+                                            <div class="form-group">
+                                                <div class="custom-control custom-checkbox">
+                                                    <input type="checkbox" class="custom-control-input" id="customCheck1" name="remember">
+                                                    <label class="custom-control-label" for="customCheck1">Remember
+                                                        me</label>
+                                                </div>
+                                            </div>
+                                            
+                                        </div>
+                                    </div>
     <input class="btn btn-success" type="submit" value='Submit'>
-    <div class="text-center col-12">
-        <p class="mt-3 mb-0">
-            <small class="mr-2 text-dark">Don't have an account?</small>
-            <a href="{% url 'accounts:register' %}" class="text-dark font-weight-bold">Sign Up</a>
-        </p>
-    </div>
+                                    <div class="text-center col-12">
+                                        <p class="mt-3 mb-0"><small class="mr-2 text-dark">Don't have an account
+                                                ?</small> <a href="{% url 'accounts:register' %}" class="text-dark font-weight-bold">Sign Up</a></p>
+                                    </div>
 </form>
                         </div>
                     </div>
