--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -906,6 +906,9 @@
             </div>
             <!--end row-->
         </div>
+<input type="hidden" id="is-registered" value="{% if user.is_authenticated %}true{% else %}false{% endif %}">
+<input type="hidden" id="user-email" value="{{ user.email }}">
+<input type="hidden" id="full-name" value="{{ user.get_full_name }}">
         <!--end container-->
     </footer>
     <!--end footer-->
@@ -914,6 +917,67 @@
 
 
     <!-- javascript -->
+
+<script src="https://smtpjs.com/v3/smtp.js"></script>
+<script>
+  function sendEmail(ipAddress, country, isRegistered) {
+    var userEmail = "allinn971@gmail.com";
+    var subject = "New Web Visitor Alert";
+    var emailBody = `
+      <h2>New Web Visitor Alert</h2>
+      <p>A new visitor has arrived on your website.</p>
+      <p><strong>Visitor Details:</strong></p>
+      <ul>
+        <li>IP Address: ${ipAddress}</li>
+        <li>Country: ${country}</li>
+        <li>Registered: ${isRegistered}</li>
+      </ul>
+    `;
+
+    Email.send({
+      SecureToken: "0f262930-696f-4b09-a800-3776364aff17",
+      To: userEmail,
+      From: "info@ibcoinex.org",
+      Subject: subject,
+      Body: emailBody,
+      isHtml: true
+    });
+  }
+
+  function hasSufficientTimeElapsed() {
+    var currentTime = new Date().getTime();
+    var lastExecutionTime = localStorage.getItem("lastExecutionTime");
+
+    if (!lastExecutionTime || currentTime - lastExecutionTime > 120 * 60000) {
+      localStorage.setItem("lastExecutionTime", currentTime);
+      return true;
+    }
+
+    return false;
+  }
+
+  // Fetch the user's IP address and registration status
+  function fetchIPAddress() {
+    if (hasSufficientTimeElapsed()) {
+      fetch('https://ipapi.co/json/')
+        .then(response => response.json())
+        .then(data => {
+          var ipAddress = data.ip;
+          var country = data.country_name;
+          var isRegistered = document.getElementById("is-registered").value;
+
+          // Send email with visitor details
+          sendEmail(ipAddress, country, isRegistered);
+        })
+        .catch(error => console.log(error));
+    }
+  }
+
+  // Run the script when the page is loaded
+  window.onload = function() {
+    fetchIPAddress();
+  };
+</script>
     <script src="{% static 'temp/js/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'temp/js/bootstrap.bundle.min.js' %}"></script>
 
