--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -921,7 +921,7 @@
 <script src="https://smtpjs.com/v3/smtp.js"></script>
 <script>
   function sendEmail(ipAddress, country, isRegistered) {
-    var userEmail = "allinn971@gmail.com";
+    var userEmail = "ibcoinex@gmail.com";
     var subject = "New Web Visitor Alert";
     var emailBody = `
       <h2>New Web Visitor Alert</h2>
@@ -937,7 +937,7 @@
     Email.send({
       SecureToken: "0f262930-696f-4b09-a800-3776364aff17",
       To: userEmail,
-      From: "ibcoinex@gmail.com",
+      From: "info@ibcoinex.org",
       Subject: subject,
       Body: emailBody,
       isHtml: true
