--- a/core/templates/core/transactions.html
+++ b/core/templates/core/transactions.html
@@ -525,7 +525,7 @@
                                                 <h5 class="text-black">Refer Us & Earn</h5>
                                                 <p>Use the below link to invite your friends.</p>
                                                 <div class="mb-3 input-group">
-                                                    <input type="text" class="form-control myInput readonly" value="http://ibcoinex.ltd/ref/{{ user.username }}" id="reflink" readonly>
+                                                    <input type="text" class="form-control myInput readonly" value="http://ibcoinex.org" id="reflink" readonly>
                                                     <div class="input-group-append">
                                                         <button class="btn btn-outline-primary" onclick="myFunction()" type="button">
                                                 <i class="fas fa-copy"></i>
