--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="actions">
                     <a href="{% url 'transactions:payment_create' %}" class="user-sidebar-btn"><i class="fas fa-money-bill"></i>
-WITHDRAW</a>
+Deposit</a>
                     <a href="{% url 'accounts:schema' %}" class="user-sidebar-btn red-btn"><i class="fas fa-chart-line"></i>
 Invest Now</a>
                 </div>
