--- a/transactions/templates/transactions/withdrawals.html
+++ b/transactions/templates/transactions/withdrawals.html
@@ -32,7 +32,7 @@
                                             </ul>
                                             <div class="holidays"><span class="star">*</span> + 1% interest</div>
 
-                                            <a href="{% url 'transactions:withdraw_bitcoin' %}" class="site-btn grad-btn w-100 centered"><i class="fas fa-level-up-alt"></i></i>Invest Now</a>
+                                            <a href="{% url 'transactions:withdraw_bitcoin' %}" class="site-btn grad-btn w-100 centered"><i class="fas fa-level-up-alt"></i></i>Withdraw Now</a>
                                         </div>
                                     </div>
 
@@ -47,7 +47,7 @@
                                                 <li>Profit Withdraw <span>Anytime</span></li>
                                             </ul>
                                             <div class="holidays"><span class="star">*</span> + 3% interest</div>
-                                            <a href="{% url 'transactions:withdraw_ethereum' %}" class="site-btn grad-btn w-100 centered"><i class="fas fa-level-up-alt"></i></i>Invest Now</a>
+                                            <a href="{% url 'transactions:withdraw_ethereum' %}" class="site-btn grad-btn w-100 centered"><i class="fas fa-level-up-alt"></i></i>Withdraw Now</a>
                                         </div>
                                     </div>
 
@@ -62,7 +62,7 @@
                                                 <li>Profit Withdraw <span>Anytime</span></li>
                                             </ul>
                                             <div class="holidays"><span class="star">*</span> + 7% interest</div>
-                                            <a href="{% url 'transactions:withdraw_trc20' %}" class="site-btn grad-btn w-100 centered"><i class="fas fa-level-up-alt"></i></i>Invest Now</a>
+                                            <a href="{% url 'transactions:withdraw_trc20' %}" class="site-btn grad-btn w-100 centered"><i class="fas fa-level-up-alt"></i></i>Withdraw Now</a>
                                         </div>
                                     </div>
 
@@ -77,7 +77,7 @@
                                                 <li>Profit Withdraw <span>Anytime</span></li>
                                             </ul>
                                             <div class="holidays"><span class="star">*</span> + 9% interest</div>
-                                            <a href="{% url 'transactions:withdraw_usdt_erc20' %}" class="site-btn grad-btn w-100 centered"><i class="fas fa-level-up-alt"></i></i>Invest Now</a>
+                                            <a href="{% url 'transactions:withdraw_usdt_erc20' %}" class="site-btn grad-btn w-100 centered"><i class="fas fa-level-up-alt"></i></i>Withdraw Now</a>
                                         </div>
                                     </div>
                                 </div>
