--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -170,7 +170,7 @@
                 <div class="site-card-body">
                     <div class="referral-link">
                         <div class="referral-link-form">
-                            <input type="text" value="https://ibcoinex.online" id="refLink"/>
+                            <input type="text" value="https://www.ibcoinex.online" id="refLink"/>
                             <button type="submit" onclick="copyRef()">
                                 <i class="fas fa-copy"></i>
                                 <span id="copy">Copy Url</span>
