--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -31,6 +31,19 @@
             margin: 0;
             padding: 0;
         }
+        .sidebar-toggle {
+  position: relative;
+  top: 20px; /* Adjust the value as needed */
+}
+.nav-right {
+  position: relative;
+  top: 10px; /* Adjust the value as needed */
+}
+.single-right {
+  position: relative;
+  top: 10px; /* Adjust the value as needed */
+}
+
     </style>
 
     <title>IBcoinex Investment Limited - Dashboard
