--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -25,6 +25,11 @@
     <link rel="stylesheet" href="https://ivcoinex.ltd/assets/frontend/css/styles.css?var=2.1" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
+<style>
+    .side-nav {
+        margin-top: 38px; /* Adjust the value to move the side nav lower */
+    }
+</style>
     <style>
         //The Custom CSS will be added on the site head tag 
         .site-head-tag {
@@ -33,7 +38,7 @@
         }
         .sidebar-toggle {
   position: relative;
-  top: 20px; /* Adjust the value as needed */
+  top: 55px; /* Adjust the value as needed */
 }
 .nav-right {
   position: relative;
@@ -43,6 +48,7 @@
   position: relative;
   top: 10px; /* Adjust the value as needed */
 }
+
 
     </style>
 
